# TextualGameEngine

./: README.md
ItalienQuiSaute/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ItalienQuiSaute.sln  ItalienQuiSaute.vcxproj  ItalienQuiSaute.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
ItalienQuiSaute/ItalienQuiSaute.dir/Release/: ItalienQuiSaute.exe.recipe  ItalienQuiSaute.vcxproj.FileListAbsolute.txt
ItalienQuiSaute/ItalienQuiSaute.dir/Release/ItalienQuiSaute.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ItalienQuiSaute.lastbuildstate  ItalienQuiSaute.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: component.h  component_manager.h  entity.h  entity_manager.h  game.h  system.h  system_manager.h
include/components/: health_component.h  name_component.h  position_component.h
include/systems/: input_system.h  movement_system.h  render_system.h
marioECS/: README.md
marioECS/ItalienQuiSaute/: CMakeLists.txt
src/: component_manager.cpp  entity_manager.cpp  game.cpp  main.cpp  system_manager.cpp
src/components/: health_component.cpp  name_component.cpp  position_component.cpp
src/systems/: input_system.cpp  movement_system.cpp  render_system.cpp
